:recycle: :construction: HubHome

--- a/lib/layout/index.styl
+++ b/lib/layout/index.styl
@@ -168,6 +168,12 @@ label
   top 50%
   margin-top -1px
 
+.container-md
+  max-width 768px
+  padding-left 10px
+  padding-right 10px
+  margin auto
+
 .small-container
   max-width 300px
   padding-left 10px
