--- a/lib/site/home-hub/styles.styl
+++ b/lib/site/home-hub/styles.styl
@@ -1,20 +1,20 @@
-.hub-info-button 
+.hub-info-button
     margin-left 40%
     margin-bottom 5px
 .hub-description
-    border 3px solid #333 
-.hub-forums-button    
+  h1
+    text-align center
+.hub-forums-button
     margin 30px
-.hub-associations-button    
+.hub-associations-button
     margin-left 40%
     margin-bottom 5px
 .logoImage
-    width 200px 
     height 150px
 .list-groups
     display flex
-    flex-wrap wrap 
-    justify-content space-between      
+    flex-wrap wrap
+    justify-content center
 .input-addon
     font-size 14px
     font-weight 400
@@ -30,29 +30,29 @@
     border-radius 4px
     border-top-right-radius 0
     border-bottom-right-radius 0
-    border-right: 0     
-.hub-container 
+    border-right: 0
+.hub-container
     width 70%
-    margin auto   
+    margin auto
 .more-load
     background #f0f0f0
     margin 20px 0px
-    width 100%   
-.title
-    text-align center     
+    width 100%
+
 .group-link
     padding-left 20%
-.hub-forums-view   
-    display flex 
+.hub-forums-view
+    display flex
 .hub-footer
-    padding-top 20px    
+    padding-top 20px
     text-align center
 
-.help   
+.help
     text-decoration underline
 .hub-footer-roles
     display flex
-    justify-content space-around   
+    justify-content space-around
 .footer-faq
-    margin 30px     
+    margin 30px
 
+@import './*/styles'
