--- a/lib/site/home-hub/search-bar/styles.styl
+++ b/lib/site/home-hub/search-bar/styles.styl
@@ -1,3 +1,6 @@
+.search-bar
+  margin-bottom 10px
+
 .loading-spinner
   background-image unquote('url("https://www.alyt.com/frontend/img/spinner.gif")')
   background-size 25px 25px
