--- a/lib/system/uploads/styles.styl
+++ b/lib/system/uploads/styles.styl
@@ -1,15 +1,18 @@
 h1
     margin-left 40%
 
-#images 
+.upload-tab
+  padding-top 20px
+
+#images
       display flex
       flex-wrap wrap
       justify-content space-between
-#imagename 
+#imagename
         margin-top 20px
         width 300
         height 250
-#fileName 
+#fileName
         margin 25px
 #deleteOne
         background-color #d9534f
@@ -25,7 +28,7 @@ h1
         cursor pointer
         width 150
         margin-top 20px
-#deleteAll 
+#deleteAll
         background-color #d9534f
         color #fff
         border-color #d43f3a
@@ -52,4 +55,4 @@ h1
       text-align center
       cursor pointer
       width 300
-      margin-left 150px        
+      margin-left 150px
