:boom: :lipstick: Hub Home ++

--- a/lib/site/home-multiforum/search-results/load-more/styles.styl
+++ b/lib/site/home-multiforum/search-results/load-more/styles.styl
@@ -4,9 +4,8 @@ boxSize = 6
 
 .load-more
   background #f0f0f0
-  margin 20px 0px
+  margin 20px auto
   width 100%
-  max-width 600px
   .msg-empty
     width 100%
     text-align center
