:lipstick: Hub Home ++

--- a/lib/site/hub/styles.styl
+++ b/lib/site/hub/styles.styl
@@ -17,7 +17,8 @@
 .hub-info-button
     margin-left 40%
     margin-bottom 5px
-.hub-description
+
+.hub-description, .hub-footer
   font-size 1.1rem
   padding-bottom 1em
 
@@ -88,9 +89,6 @@
     padding-left 20%
 .hub-forums-view
     display flex
-.hub-footer
-    padding-top 20px
-    text-align center
 
 .help
     text-decoration underline
