:construction: :bug: :arrow_up: Groups Fixes
- Migrate GroupUpdate to full React UX
- add Owners to Groups
- :construction: Permissions for users
- Bump MongoDB driver to 3.1.10 (change on `connect` and `populate)

--- a/lib/settings/settings/sidebar.styl
+++ b/lib/settings/settings/sidebar.styl
@@ -18,7 +18,7 @@
           width 100%
           display inline-block
           text-decoration none
-          color #3d699e
+          color #448AFF
           font-size 12px
           font-weight bold
           padding 10px 20px
