--- a/lib/styleguide/index.jade
+++ b/lib/styleguide/index.jade
@@ -20,7 +20,7 @@ block content
     h2 Colors
     .colors
       +color('#563c5c')
-      +color('#3d699e')
+      +color('#448AFF')
     h3 Shades of Grey
     .colors
       +color('rgba(0,0,0, .8)', 'rgba(#000, .8)')
