--- a/lib/system/users/item.jade
+++ b/lib/system/users/item.jade
@@ -2,3 +2,5 @@ div.list-group-item
   b.user-title= user.displayName
   |&nbsp;-&nbsp;
   span.user-email= user.fullName
+  |&nbsp;-&nbsp;
+  span.user-email= user.email
