--- a/lib/admin/admin-permissions/add-user-input/template.jade
+++ b/lib/admin/admin-permissions/add-user-input/template.jade
@@ -1,4 +1,4 @@
 div.form-group.add-user-input
   .input-group
     .input-group-addon: i.fa.fa-fw.status-icon
-    input.form-control(type="text", placeholder=t('add-user-input.placeholder'), maxlength=256, data-input)
+    input.form-control(type="text", placeholder=t('common.users.placeholder'), maxlength=256, data-input)
