--- a/lib/common/uploader/styles.styl
+++ b/lib/common/uploader/styles.styl
@@ -1,7 +1,17 @@
+.upload-form-control
+  .upload-input-files
+    opacity 0
+    position absolute
+    z-index -1
+
+
 .fileUploader
   width 100%
   .input-group-btn > .btn
     padding 9px 12px
+
+    .fa
+      line-height 1em
   .input-group-btn:last-child > .btn
     border-top-right-radius 4px
     border-bottom-right-radius 4px
