--- a/lib/layout/index.styl
+++ b/lib/layout/index.styl
@@ -80,13 +80,40 @@ a
     text-decoration none
 
 img.avatar
-  border-radius 2px
+  border-radius 4px
 
 .btn
-  border-radius 2px
+  border-radius 4px
+
+  &.text-danger
+    color #843534
+
+  &.text-neutral
+    color #555
+    &:hover
+      color #333
+
   & > .glyphicon
     line-height 18px
     padding-bottom 2px
+
+  & > .fa
+    line-height 1.44em
+
+  &:focus, &:focus:active
+    border-color #66afe9
+    outline 0
+    box-shadow inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6)
+
+    &.text-danger, &.btn-link.text-danger
+      color #c0392b
+      border-color #c0392b
+      box-shadow inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px #ce8483
+
+    &.text-neutral, &.btn-link.text-neutral
+      color #333
+      border-color #999
+      box-shadow inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px #999
 
 .btn-success
   background-color #27ae60
@@ -108,8 +135,42 @@ img.avatar
   float left
   padding 7px 12px 3px
 
+.btn-badge
+  border-color rgba(0,0,0,.075)
+  color #999
+  font-size 85%
+
+  &:hover
+    border-color #999
+    color #666
+
+  & > *
+    vertical-align middle
+
+  .fa
+    position relative
+    left -5px
+    font-size 100%
+
+.input-group-btn
+  & > .btn:active, & > .btn:focus, & > .btn:hover
+    z-index 3
+
 .input-group-addon
   min-width 40px
+
+.has-error
+  .form-control
+    color #a94442
+
+  .input-group-btn button
+    border-color #a94442
+    color #a94442
+
+    &:focus
+      border-color #843534
+      color #843534
+      box-shadow inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px #ce8483
 
 .form
   .radio-inline input[type=radio]
@@ -123,9 +184,6 @@ label
   text-transform none
 
 .alert
-  color white
-  border 1px solid
-  border-radius border_radius
   font-size .9em
 
   &.with-icon
@@ -137,26 +195,6 @@ label
       margin-right .5em
       top 1.2em
       left 1.3em
-
-  &.alert-info
-    color darken(#3498db, 50%)
-    border-color #3498db
-    background-color lighten(#3498db, 70%)
-
-  &.alert-success
-    color darken(#27ae60, 50%)
-    border-color #27ae60
-    background-color lighten(#27ae60, 70%)
-
-  &.alert-warning
-    color darken(#f1c40f, 50%)
-    border-color #f1c40f
-    background-color lighten(#f1c40f, 70%)
-
-  &.alert-danger
-    color darken(#d9534f, 50%)
-    border-color #d9534f
-    background-color lighten(#d9534f, 70%)
 
 .system-alert
   margin-top 20px
