--- a/lib/system/groups/styles.styl
+++ b/lib/system/groups/styles.styl
@@ -1,3 +1,46 @@
+.group.update
+  textarea
+    resize vertical
+  .help-block
+    font-size 80%
+    padding-left 1rem
+
+.users-list
+  padding 0
+
+  .list-group-item
+    padding 0
+
+    .btn-badge
+      background-color transparent
+
+      &.admin
+        background-color #448AFF
+        border-color #448AFF
+        color white
+
+        &:hover
+          background-color darken(#448AFF, 10%)
+          border-color darken(#448AFF, 10%)
+
+    .media-left > img
+      max-width 48px
+      height 48px
+
+    .media-body > .flex-wrapper
+      display flex
+      align-items center
+
+      .info
+        flex-grow 1
+        
+      .actions
+        flex-skrink 0
+        padding 0 6px
+
+        & > *
+          margin 0 0.25em
+
 input[type="text"]
   width 100%
   height 34px
@@ -193,7 +236,5 @@ forum_card_border = 1px solid rgba(255, 255, 255, 0.5)
     padding-top 10px
     }
   }
- #description {
-   height 100px
-   resize none
-   }
+
+  @import './*/styles'
