:lipstick: UX fixes

--- a/lib/site/hub/styles.styl
+++ b/lib/site/hub/styles.styl
@@ -19,7 +19,7 @@
     margin-bottom 5px
 
 .hub-description, .hub-footer
-  font-size 1rem
+  font-size 1.1rem
   margin-top 1em
   padding-bottom 1em
 
@@ -48,7 +48,7 @@
         margin 5px auto
         padding 5px 1em
         color #f9f9f9
-        background-color #3d699e
+        background-color primary_color
         border-radius 4px
 
 .hub-forums-button
